// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`registro gets a schedule 1`] = `
Object {
  "schedule": Object {
    "chat": "HTTP://URL_AQUI",
    "classroom": "HTTP://URL_AQUI",
    "group": "E1-1",
    "sesiones": "HTTP://URL_AQUI",
    "teacher": "GONZALO ROCHA",
  },
}
`;

exports[`registro gets an applicant who is already registered 1`] = `
Object {
  "applicant": Object {
    "codigo": "1234567890",
    "email": "bad@bunny.pr",
    "nivel": "4",
    "nombre": "Benito Antonio",
    "registeredSchedule": Object {
      "chat": "HTTP://URL_AQUI",
      "classroom": "HTTP://URL_AQUI",
      "group": "E4-1",
      "sesiones": "HTTP://URL_AQUI",
      "teacher": "GONZALO ROCHA",
    },
    "registering": false,
    "schedules": Array [
      Object {
        "group": "E4-1",
        "serialized": "E4-1 GONZALO ROCHA ",
        "teacher": "GONZALO ROCHA",
      },
      Object {
        "group": "E4-2",
        "serialized": "E4-2 OTRO GONZALO ",
        "teacher": "OTRO GONZALO",
      },
    ],
  },
}
`;

exports[`registro gets an applicant who isn't registered 1`] = `
Object {
  "applicant": Object {
    "apellido_materno": "Ocasio",
    "apellido_paterno": "Martinez",
    "carrera": "Agronegocios",
    "ciclo": "2021A",
    "codigo": "1234567890",
    "curso": "en",
    "desertor": false,
    "email": "bad@bunny.pr",
    "externo": true,
    "genero": "M",
    "nivel": "4",
    "nombre": "Benito Antonio",
    "registeredSchedule": null,
    "registering": true,
    "schedules": Array [
      Object {
        "group": "E4-1",
        "serialized": "E4-1 GONZALO ROCHA ",
        "teacher": "GONZALO ROCHA",
      },
      Object {
        "group": "E4-2",
        "serialized": "E4-2 OTRO GONZALO ",
        "teacher": "OTRO GONZALO",
      },
    ],
    "telefono": "3411234567",
  },
}
`;

exports[`registro gets registering levels 1`] = `
Object {
  "english": Array [
    "1",
    "2",
  ],
}
`;

exports[`registro modifies an applicants data 1`] = `
Object {
  "saveApplicant": Object {
    "codigo": "1234567890",
    "curso": "fr",
    "nivel": "4",
    "nombre": "Benito Antonio",
  },
}
`;

exports[`registro registers a student 1`] = `
Object {
  "registerStudent": Object {
    "nombre": "Benito Antonio",
    "schedule": Object {
      "chat": "HTTP://URL_AQUI",
      "classroom": "HTTP://URL_AQUI",
      "group": "E4-1",
      "sesiones": "HTTP://URL_AQUI",
      "teacher": "GONZALO ROCHA",
    },
  },
}
`;

exports[`registro returns only schedules not full 1`] = `
Object {
  "applicant": Object {
    "curso": "en",
    "nivel": "4",
    "schedules": Array [
      Object {
        "group": "E4-2",
        "serialized": "E4-2 OTRO GONZALO ",
        "teacher": "OTRO GONZALO",
      },
    ],
  },
}
`;

exports[`registro saves levels registering 1`] = `
Object {
  "saveRegisteringLevels": Array [
    "1",
    "2",
  ],
}
`;
